--- a/pawsight/pubspec.yaml
+++ b/pawsight/pubspec.yaml
@@ -22,6 +22,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  sqflite_common_ffi: ^2.3.6
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
