--- a/pawsight/pubspec.yaml
+++ b/pawsight/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_markdown: ^0.7.7+1
   font_awesome_flutter: ^10.12.0
+  forui: ^0.16.0
   http: ^1.6.0
   image_picker: ^1.2.1
   path: ^1.9.1
