feat: update application logo and launcher icons
- Add pawsightLogo.png to assets
- Update Android launcher icons (mipmap resources)
- Update iOS AppIcon assets
- Update pubspec.yaml and platform configuration files

--- a/pawsight/pubspec.yaml
+++ b/pawsight/pubspec.yaml
@@ -22,8 +22,16 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.2
   flutter_lints: ^5.0.0
   sqflite_common_ffi: ^2.3.6
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/pawsightLogo.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
 
 flutter:
   uses-material-design: true
