fix: Add Android intent queries for url_launcher functionality
- Add tel: scheme queries for phone call functionality
- Add mailto: scheme queries for email functionality
- Add http/https scheme queries for web browser (maps, social media)
- Add geo: scheme query for maps intent
- Fixes Android 11+ package visibility restrictions
- Resolves 'component name is null' errors when launching external intents

--- a/pawsight/android/app/src/main/AndroidManifest.xml
+++ b/pawsight/android/app/src/main/AndroidManifest.xml
@@ -41,5 +41,41 @@
             <action android:name="android.intent.action.PROCESS_TEXT"/>
             <data android:mimeType="text/plain"/>
         </intent>
+        
+        <!-- Phone call intent -->
+        <intent>
+            <action android:name="android.intent.action.DIAL" />
+            <data android:scheme="tel" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="tel" />
+        </intent>
+        
+        <!-- Email intent -->
+        <intent>
+            <action android:name="android.intent.action.SENDTO" />
+            <data android:scheme="mailto" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="mailto" />
+        </intent>
+        
+        <!-- Web browser intent for maps and social media -->
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="http" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+        
+        <!-- Maps intent -->
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="geo" />
+        </intent>
     </queries>
 </manifest>
