--- a/pawsight/pubspec.yaml
+++ b/pawsight/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  connectivity_plus: ^6.1.4      # Network status monitoring
   flutter_markdown: ^0.7.7+1
   font_awesome_flutter: ^10.12.0
   forui: ^0.16.0
@@ -16,8 +17,10 @@ dependencies:
   image_picker: ^1.2.1
   path: ^1.9.1
   provider: ^6.1.5+1
+  shared_preferences: ^2.5.3     # Persist UUID for lazy auth
   sqflite: ^2.4.2
   url_launcher: ^6.3.2
+  uuid: ^4.5.1                   # Generate unique user IDs
 
 dev_dependencies:
   flutter_test:
