--- a/pawsight/.gitignore
+++ b/pawsight/.gitignore
@@ -12,6 +12,10 @@
 .swiftpm/
 migrate_working_dir/
 
+# Environment variables (NEVER commit secrets!)
+.env
+*.env.local
+
 # IntelliJ related
 *.iml
 *.ipr
