--- a/pawsight/pubspec.yaml
+++ b/pawsight/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   image_picker: ^1.2.1
   path: ^1.9.1
   provider: ^6.1.5+1
+  share_plus: ^10.1.4            # Share content to other apps
   shared_preferences: ^2.5.3     # Persist UUID for lazy auth
   sqflite: ^2.4.2
   url_launcher: ^6.3.2
