--- a/pawsight/pubspec.yaml
+++ b/pawsight/pubspec.yaml
@@ -43,5 +43,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/tail/
+    - assets/images/ear/
+    - assets/images/eye/
     - .env
     - .env.example
