feat(assets): Integrate real behavior images for all categories
- Updated pubspec.yaml to include asset directories for tail, ear, eye, posture, vocal, and whisker.
- Updated DatabaseHelper to map behaviors to the new image assets.
- Fixed main.dart formatting.

--- a/pawsight/pubspec.yaml
+++ b/pawsight/pubspec.yaml
@@ -46,5 +46,8 @@ flutter:
     - assets/images/tail/
     - assets/images/ear/
     - assets/images/eye/
+    - assets/images/posture/
+    - assets/images/vocal/
+    - assets/images/whisker/
     - .env
     - .env.example
