fix(ci): Create .env from template before Flutter builds
- Add 'Create .env from template' step to analyze, test, and build jobs
- Copies .env.example to .env so the asset exists in CI environment
- Fixes: 'asset_does_not_exist' warning for .env file
- Local development uses real .env with actual secrets

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Create .env from template
+        run: cp .env.example .env
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -46,6 +49,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Create .env from template
+        run: cp .env.example .env
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
@@ -77,6 +83,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Create .env from template
+        run: cp .env.example .env
 
       - name: Set up Java
         uses: actions/setup-java@v4
