fix(cd): add .env creation step and remove duplicate workflows
- Add .env creation from secrets before flutter build in CD workflow
- Remove duplicate .github/workflows folder inside pawsight/
- Fixes release build failing with 'No file or variants found for asset: .env'

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,6 +23,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Create .env from secrets
+        run: |
+          printf 'CHAT_API_URL=%s\nJWT_SECRET=%s\n' "${{ secrets.CHAT_API_URL }}" "${{ secrets.JWT_SECRET }}" > .env
+          echo "✅ .env file created successfully"
+          ls -la .env
+
       - name: Extract version from tag
         id: version
         run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
