feat: add Discover screen with cat APIs integration
- Add new Discover screen with Facts, Breeds, and Gallery tabs
- Integrate 5 cat APIs: cat-fact, meowfacts, CATAAS, TheCatAPI, HTTP.cat
- Create BaseApiService with retry logic and error handling
- Add CatApiProvider for centralized state management
- Update home screen with Discover card in 2x2 grid
- Add THE_CAT_API_KEY to GitHub workflows for CI/CD

New files:
- lib/models/cat_breed.dart, cat_fact.dart, cataas_image.dart, http_cat_image.dart
- lib/services/base_api_service.dart, cat_facts_service.dart, cataas_service.dart,
  http_cat_service.dart, the_cat_api_service.dart
- lib/providers/cat_api_provider.dart
- lib/screens/discover_screen.dart

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Create .env from secrets
         run: |
-          printf 'CHAT_API_URL=%s\nJWT_SECRET=%s\n' "${{ secrets.CHAT_API_URL }}" "${{ secrets.JWT_SECRET }}" > .env
+          printf 'CHAT_API_URL=%s\nJWT_SECRET=%s\nTHE_CAT_API_KEY=%s\n' "${{ secrets.CHAT_API_URL }}" "${{ secrets.JWT_SECRET }}" "${{ secrets.THE_CAT_API_KEY }}" > .env
           echo "✅ .env file created successfully"
           ls -la .env
 
