--- a/pawsight/.env.example
+++ b/pawsight/.env.example
@@ -13,3 +13,8 @@ CHAT_API_URL=https://your-backend-service.com/webhook/your-endpoint
 # Example generation (Linux/Mac):
 #   openssl rand -base64 64
 JWT_SECRET=your-64-byte-base64-encoded-secret-key-here
+
+# TheCatAPI Configuration
+# Get your free API key at: https://thecatapi.com/
+# Provides access to cat images, breed information, and more
+THE_CAT_API_KEY=your-thecatapi-key-here
