fix(android): add INTERNET permission for release builds (v1.2.3)
- Add android.permission.INTERNET to main manifest (required for release builds)
- Add android.permission.ACCESS_NETWORK_STATE for connectivity_plus
- Bump version to 1.2.3

--- a/pawsight/android/app/src/main/AndroidManifest.xml
+++ b/pawsight/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Required for API communication -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- Required for ConnectivityPlus to check network status -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:label="pawsight"
         android:name="${applicationName}"
